--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ cache:
   directories:
     - node_modules
 script:
+  - npm install codecov -g
   - npm run test
   - npm run build
 deploy:
@@ -15,3 +16,5 @@ deploy:
 on:
   branch: master
   branch: develop
+after_success:
+  - codecov
